# Projeto-Integrador-III

./: .gitignore  Dockerfile  README.md  docker-compose.yml  insomnia_maas_grpc.json  mkdocs.yml  postman_maas_grpc.json
Consumidor/: Dockerfile  ROTEIRO_VIDEO.md  docker-compose.yml  entrypoint.sh  requirements.txt
Consumidor/db/: analytics_views.sql  init_db.sql
Consumidor/db/migrations/: add_ai_predictions.sql
Consumidor/src/: ai_processor.py  api.py  dashboard.py  data_processor.py  ingestor.py  maas_client.py  train_model.py
Consumidor/static/: index.html
Consumidor/testes_consumidor/: conftest.py  test_ai_heuristica.py  test_api_endpoints.py  test_classificacao.py  test_database.py  test_ingestor.py  test_maas_client.py  test_pipeline_integrado.py  test_struct_formats.py  test_urgency.py  test_vizinhanca.py
dashboard/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/prisma/: schema.prisma
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/allocate/: route.ts
dashboard/src/app/api/report/: route.ts
dashboard/src/app/api/tenants/: route.ts
dashboard/src/app/tenants/: page.tsx
dashboard/src/components/: AllocateModal.tsx  AutoRefresh.tsx  RefreshButton.tsx  ReportModal.tsx  TenantForm.tsx  TenantList.tsx  TopTenantsChart.tsx
dashboard/src/lib/: prisma.ts
dashboard/src/lib/gRPC_Client/: index.ts
db/: schema.sql
docs/: Entrega1_Relatorio.md  MANUAL_DESENVOLVEDOR.md  Manualv2.md  api-grpc.md  arquitetura.md  banco-de-dados.md  dashboard.md  index.md  instalacao.md  maas-core.md
docs/consumidor/: api.md  index.md  pipeline.md
docs/guias/: manual-desenvolvedor.md  manual-usuario.md
proto/: maas.proto
scripts/: client_test.py  maas_reader.py  maas_writer.py  teste_alocacao.py
server/: CMakeLists.txt  main.cpp
